--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
+    <main>
+      <include src="./partials/gallery.html"></include>
+    </main>
 
   </body>
 </html>
