--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,9 @@
     <main>
       <include src="./partials/gallery.html"></include>
     </main>
-
+<footer>
+  <include src="./partials/footer.html"></include>
+</footer>
 
   </body>
 </html>
