--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,9 @@
     </main>
 <footer>
   <include src="./partials/footer.html"></include>
+ 
 </footer>
+<include src="./partials/footer-modal.html"></include>
 
   </body>
 </html>
