--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
+   
     <include src="./partials/header.html"></include>
 
     <main>
@@ -19,9 +19,8 @@
     </main>
 <footer>
   <include src="./partials/footer.html"></include>
- 
 </footer>
 <include src="./partials/footer-modal.html"></include>
-
+<include src="./partials/upbtn.html"></include>
   </body>
 </html>
