--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <include src="./partials/slider.html"></include>
 
     <main>
+      <include src="./partials/slider.html"></include>
       <include src="./partials/gallery.html"></include>
     </main>
 <footer>
