--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <main>
       <include src="./partials/slider.html"></include>
       <include src="./partials/gallery.html"></include>
+      <include src="./partials/pagination.html"></include>
     </main>
 <footer>
   <include src="./partials/footer.html"></include>
