--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./sass/index.scss" />
+    <link type="image/x-icon" href="/src/images/filmfavicon.png" rel="shortcut icon" >
+    <link type="Image/x-icon" href="/src/images/filmfavicon.png" rel="icon" >
     <script type="module" src="./index.js"></script>
   </head>
   <body>
