--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <include src="./partials/header.html"></include>
    
 
-    <main>
+    <main class="content">
       <include src="./partials/slider.html"></include>
       <include src="./partials/gallery.html"></include>
       <include src="./partials/pagination.html"></include>
